[tool.poetry]
name = "pyword"
version = "0.1.0"
description = "Word game solvers in Python"
authors = ["Connor Newton <connor@ifthenelse.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
mypy = "^0.982"
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-noqa = "^1.2.9"
flake8-bugbear = "^22.9.23"
isort = {version = "^5.10.1", extras = ["colors"]}

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
