[tool.poetry]
name = "pyword"
version = "0.1.0"
description = "Word game solvers in Python"
authors = ["Connor Newton <connor@ifthenelse.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = "^22.10.0"
flake8 = "^5.0.4"
flake8-noqa = "^1.2.9"
flake8-bugbear = "^22.9.23"
isort = {version = "^5.10.1", extras = ["colors"]}
mypy = "^0.991"

[tool.poetry.scripts]
spelling-bee = "pyword.spelling_bee:cli"
boggle = "pyword.boggle:cli"
wordiply = "pyword.wordiply:cli"
letter-boxed = "pyword.letter_boxed:cli"
linear = "pyword.linear:cli"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
